--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                     <span class="text">R$ 45,90/mês*</span>
                 </li>
                 <li class="hero__content__combos__combo">
-                    <img src="./dist/images/logos/disney_star_plus.png" alt="Disney+ - Star+ - Combo+">
+                    <img src="./dist/images/logos/disney_star_plus_starzplay.png" alt="Disney+ - Star+ - STARZPLAY">
                     <button class="button">Assine Agora</button>
-                    <span class="text">R$ 45,90/mês*</span>
+                    <span class="text">R$ 55,90/mês*</span>
                 </li>
             </ul>
             <p class="text--small">
@@ -240,7 +240,7 @@
                 <div class="faq__questions__item__question" data-faq-question>
                     O ques está incluído no Disney+?
                 </div>
-                <div class="faq__questions__item__answer text--big">
+                <div class="faq__questions__item__answer text">
                     <span>
                         <p>
                             O Disney+ oferece:
@@ -282,26 +282,52 @@
             </li>
             <li class="faq__questions__item">
                 <div class="faq__questions__item__question" data-faq-question>
-                    Pergunta?
+                    Já tem o Disney+ ou o Star+ e quer o Combo+?
                 </div>
-                <div class="faq__questions__item__answer text--big">
-                    Aresposta da pergunta
+                <div class="faq__questions__item__answer text">
+                    <span>
+                        Ao assinar o Combo+:
+                    </span>
+                    <ul>
+                        <li>O valor da sua assinatura existente será descontado do preço do Combo+.</li>
+                        <li>Se você assina o plano mensal, o valor que você paga mensalmente será descontado do preço do Combo+.</li>
+                        <li>Se você tem uma assinatura anual do Disney+ cobrada diretamente pelo Disney+, não é possível mudar para o Combo+ no momento. Entre em contato com o <a href="#">suporte do Disney+</a> para conhecer suas opções.</li>
+                        <li>Você vai receber um e-mail com os valores detalhados assim que finalizar o pagamento.</li>
+                        <li>Lembre-se: você pode cancelar a assinatura quando quiser.</li>
+                        <span>
+                            No momento, apenas a assinatura mensal do Combo+ está disponível.
+                        </span>
+                    </ul>
                 </div>
             </li>
             <li class="faq__questions__item">
                 <div class="faq__questions__item__question" data-faq-question>
-                    Pergunta?
+                    Quais formas de pagamento posso utilizar?
                 </div>
-                <div class="faq__questions__item__answer text--big">
-                    Aresposta da pergunta
+                <div class="faq__questions__item__answer text">
+                    <span>
+                        Você pode utilizar: cartão de débito, cartão de crédito, PayPal, Mercado Pago, e também empresas parceiras como Google Play Store, App Store da Apple; Mercado Livre e provedores locais de TV, telefonia e internet.
+                    </span>
                 </div>
             </li>
-            <li class="faq__questions__item">
+            <li class="faq__questions__item" data-faq-question>
                 <div class="faq__questions__item__question">
-                    Pergunta?
+                    Como posso ver conteúdo com classificação indicativa até 16 e 18?
                 </div>
-                <div class="faq__questions__item__answer text--big">
-                    Aresposta da pergunta
+                <div class="faq__questions__item__answer text">
+                    <span>
+                        Para poder acessar o catálogo completo que inclui conteúdo com classificação indicativa até 16 e 18, todos os usuários do Disney+ na América Latina devem atualizar as configurações de controle parental do perfil. É possível restringir o conteúdo de cada perfil e também adicionar um PIN de bloqueio. Os usuários que preferirem manter a configuração atual vão continuar aproveitando o Disney+ com a classificação indicativa até 14, podendo alterá-la a qualquer momento em "Editar Perfis".
+                    </span>
+                </div>
+            </li>
+            <li class="faq__questions__item" data-faq-question>
+                <div class="faq__questions__item__question">
+                    Onde posso assistir ao Disney+?
+                </div>
+                <div class="faq__questions__item__answer text">
+                    <span>
+                        ey+ está disponível em dispositivos móveis, navegadores, videogames, decodificadores e smart TVs. Confira <a href="#">a lista completa de dispositivos compatíveis na Central de ajuda.</a>
+                    </span>
                 </div>
             </li>
         </ul>
